# codex

./: README.md
.github/workflows/: macos-core-tests.yml
codex-rs/: Cargo.toml
codex-rs/cli/: Cargo.toml
codex-rs/codexpc-xpc/: Cargo.toml  build.rs
codex-rs/codexpc-xpc/src/: codexpc_xpc.m  lib.rs
codex-rs/core/: Cargo.toml
codex-rs/core/src/: client.rs  codexpc.rs  codexpc_cli.rs  lib.rs  model_provider_info.rs
codex-rs/core/tests/: mac_codexpc_integration.rs
docs/integrations/: codexpc.md
