[package]
name = "codexpc-xpc"
version = "0.1.0"
edition = "2021"

[lib]
name = "codexpc_xpc"
path = "src/lib.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "sync"] }
serde_json = "1"
libc = "0.2"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0"
